# tomo-paint-converter

./: .gitignore  Cargo.toml  LICENSE  build.rs
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: app.rs  cli.rs  gui.rs  lib.rs  main.rs  resize.rs  texture.rs
src/app/: cli.rs  gui.rs  loading.rs  state.rs
src/app/gui/: cache.rs  processing.rs
src/app/state/: cache.rs  file_dialog.rs
src/texture/: codecs.rs  decode.rs  encode.rs  resize.rs  tegra.rs
src/texture/codecs/: bcn.rs
ui/: app-window.slint  image-viewer.slint  inputs.slint
